--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,7 @@
   </div>
   <script>
     function fizzbuzz(num) {
-      //if (num === null || num === undefined || num === '') {
-      if (num === null || num === undefined) {
+      if (num === null || num === undefined || num === '') {
         return 'NG';
       }
 
