--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,7 @@
       }
 
       if (num % 3 === 0) {
-        //return 'Fizz';
-        return 'Hoge';
+        return 'Fizz';
       }
 
       //if (num % 5 === 0) {
